[package]
name = "jamsocket-api"
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
description = "Blocking client for the Jamsocket platform API"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
anyhow = "1.0.42"
serde = { version = "1.0.130", features = ["derive"] }
