[package]
name = "jamsocket-api"
version = "0.1.3"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
description = "Blocking client for the Jamsocket platform API"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"], optional=true }
anyhow = { version = "1.0.42", optional=true }
serde = { version = "1.0.130", features = ["derive"] }

[features]
default = ["client"]
client = ["reqwest", "anyhow"]