[package]
name = "jamsocket-cli"
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Command-line tool for developing Jamsocket applications"

[dependencies]
jamsocket = { path="../jamsocket", version="0.1.0" }
jamsocket-server = { path="../jamsocket-server", version="0.1.0" }
jamsocket-wasm-host = { path="../jamsocket-wasm-host", version="0.1.0" }
clap = "3.0.0-beta.2"
actix = "0.12.0"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
anyhow = "1.0.42"
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"
wasm-bindgen-cli-support = "0.2.75"
cargo_metadata = "0.14.0"
