[package]
name = "jamsocket-cli"
version = "0.1.4"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Command-line tool for developing Jamsocket applications"

[dependencies]
jamsocket = { path="../jamsocket", version="0.1.3" }
jamsocket-stdio = { path="../jamsocket-stdio", version="0.1.3" }
jamsocket-server = { path="../jamsocket-server", version="0.1.3" }
jamsocket-wasm-host = { path="../jamsocket-wasm-host", version="0.1.3" }
jamsocket-api = { path="../jamsocket-api", version="0.1.3" }
clap = "3.0.0-beta.5"
actix = "0.12.0"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.6"
anyhow = "1.0.42"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"
wasm-bindgen-cli-support = "0.2.75"
cargo_metadata = "0.14.0"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
colored = "2.0.0"
dirs = "4.0.0"
toml_edit = "0.4.0"
