[package]
name = "jamsocket-cli"
version = "0.1.8"
edition = "2018"
readme = "README.md"
repository = "https://github.com/drifting-in-space/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Command-line tool for developing Jamsocket applications"

[dependencies]
jamsocket = { path="../jamsocket", version="0.1.7" }
jamsocket-stdio = { path="../jamsocket-stdio", version="0.1.7" }
jamsocket-server = { path="../jamsocket-server", version="0.1.7", features=["serve-static"] }
jamsocket-wasm-host = { path="../jamsocket-wasm-host", version="0.1.7" }
clap = { version = "3.0.7", features = ["derive"] }
anyhow = "1.0.52"
serde = { version = "1.0.127", features = ["derive"] }
toml = "0.5.8"
cargo_metadata = "0.14.0"
tracing = "0.1.28"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
wasm-bindgen-cli-support = "0.2.78"
fs_extra = "1.2.0"
