[package]
name = "jamsocket-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.12.0"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
anyhow = "1.0.42"
jamsocket = {path="../jamsocket"}
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.8.4"
async-std = "1.9.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
actix-files = "0.6.0-beta.6"

[dev-dependencies]
matches = "0.1.8"
