[package]
name = "jamsocket-server"
version = "0.1.2"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Actix server actor implementation of Jamsocket services"

[features]
default = ["serve-static"]
serve-static = ["actix-files"]

[dependencies]
actix = "0.12.0"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.6"
anyhow = "1.0.42"
jamsocket = {path="../jamsocket", version="0.1.1"}
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.8.4"
async-std = "1.9.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
actix-files = { version = "0.6.0-beta.6", optional = true }

[dev-dependencies]
matches = "0.1.8"
