[package]
name = "jamsocket-server"
version = "0.1.3"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Actix server actor implementation of Jamsocket services"

[dependencies]
actix = "0.12.0"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.6"
jamsocket = {path="../jamsocket", version="0.1.1"}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tracing = "0.1.28"
