[package]
name = "jamsocket-stdio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interactive_process = "0.1.2"
jamsocket = { path="../jamsocket", version="0.1.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
