[package]
name = "jamsocket-stdio"
version = "0.1.5"
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Jamsocket service that hosts a local system process."

[dependencies]
interactive_process = "0.1.2"
jamsocket = { path="../jamsocket", version="0.1.5", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
