[package]
name = "jamsocket-wasm-host"
version = "0.1.7"
edition = "2018"
readme = "README.md"
repository = "https://github.com/drifting-in-space/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket", "webassembly", "jamsocket"]
description = "A Jamsocket service implementation that takes a WebAssembly module and delegates behavior to it."

[dependencies]
anyhow = "1.0.45"
byteorder = "1.4.3"
jamsocket = {path="../jamsocket", version="0.1.7"}
wasmtime-wasi = "0.33.0"
tracing = "0.1.28"

[dependencies.wasmtime]
version = "0.33.0"
default-features = false
features = ["async", "wat", "jitdump", "parallel-compilation", "cranelift"]
