[package]
name = "jamsocket-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
byteorder = "1.4.3"
jamsocket-wasm-macro = {path="./jamsocket-wasm-macro"}
jamsocket = {path="../jamsocket"}
wasmtime-wasi = "0.28.0"

[dependencies.wasmtime]
version = "0.28.0"
default-features = false
features = ["async", "wat", "jitdump", "parallel-compilation"]
