[package]
name = "jamsocket-wasm"
version = "0.1.5"
edition = "2018"
readme = "README.md"
repository = "https://github.com/drifting-in-space/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket", "webassembly", "jamsocket"]
description = "A macro for building a Jamsocket service as a WebAssembly module."

[dependencies]
jamsocket-wasm-macro = {path="./jamsocket-wasm-macro", version="0.1.7"}
jamsocket = {path="../jamsocket", version="0.1.7"}
