[package]
name = "stateroom-server"
version = "0.2.8"
edition = "2018"
readme = "README.md"
repository = "https://github.com/drifting-in-space/stateroom"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Actix server actor implementation of Stateroom services"

[features]
default = []
serve-static = ["actix-files"]

[dependencies]
actix = "0.13.0"
actix-files = { version = "0.6.0", optional=true }
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
stateroom = {path="../stateroom", version="0.2.7"}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.28"
