[package]
name = "stateroom-server"
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/drifting-in-space/stateroom"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Server for Stateroom services over WebSockets"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
dashmap = "5.5.3"
futures-util = "0.3.30"
stateroom = {path="../stateroom", version="0.2.8"}
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
