[package]
name = "stateroom-stdio"
version = "0.2.2"
edition = "2018"
readme = "README.md"
repository = "https://github.com/drifting-in-space/stateroom"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "Stateroom service that hosts a local system process."

[dependencies]
interactive_process = "0.1.2"
stateroom = { path="../stateroom", version="0.2.2", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.74"
