[package]
name = "stateroom"
version = "0.2.2"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
repository = "https://github.com/drifting-in-space/stateroom"
license = "MIT OR Apache-2.0"
keywords = ["websocket"]
description = "A lightweight framework for building WebSocket services."
readme = "README.md"

[dependencies]
async-trait = "0.1.53"
serde = { version = "1.0.133", features = ["derive"], optional=true }

[features]
default = []

[dev-dependencies]
stateroom-wasm = { path = "../stateroom-wasm" }
stateroom-server = { path = "../stateroom-server" }
async-trait = "0.1.53"
