[package]
name = "native-echo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jamsocket = {path = "../../jamsocket"}
jamsocket-server = {path = "../../jamsocket-server"}
tracing-subscriber = {version="0.3.1", features=["fmt", "env-filter"]}
