[package]
name = "jamsocket-wasm-macro"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jamsocket/jamsocket"
license = "MIT OR Apache-2.0"
keywords = ["websocket", "webassembly", "jamsocket"]
description = "A macro for building a Jamsocket service as a WebAssembly module."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = {version="1.0.73", features=["full"]}
